# COMP7005_project

./: CMakeLists.txt
include/: client.h  clientA.h  clientB.h  common.h  proxy.h  receiver.h  sender.h  server.h
python_src/: main.py  proxy_ack_send.txt  proxy_packet_send.txt  sherlok.txt
src/: CMakeLists.txt  clientA.c  clientB.c  copy.c  proxy.c  receiver.c  sender.c  server.c
